<resources>
    <string name="app_name">Pleasant Fulfillment</string>
    <string name="ad_text">Empty ad space.</string>
    <string name="order_details_expand_button_descriptor">Expand or shrink card for order details.</string>
    <string name="image_of_product_in_sale">Image of product in sale.</string>
    <string name="status_icon_for_order">Status icon for order.</string>
    <string name="total_cost">Total Cost:</string>
    <string name="get_started">Get Started</string>
    <string name="etsy">Etsy</string>
    <string name="login_successful_message">Successfully logged in!</string>
    <string name="login_button_successful_message">Get started</string>
    <string name="login_button_failed_message">Go back</string>
    <string name="login_failed_message">Log in failed. Try again another day.</string>
    <string name="sun_status_content_description">A sun that displays the login status.</string>
    <string name="store_login_title">Store Logins</string>
    <string name="clear_login">Clear login</string>
    <string name="login">Login</string>
    <string name="login_help_text">Log in to Etsy using their website.</string>
    <string name="getting_orders_progress_text">Getting orders…</string>
    <string name="no_orders_message">No orders found here. Take a break!</string>
    <string name="no_orders_icon_content_description">No orders icon. It\'s a couch because you should take a break!</string>
    <string name="account_management_item_text">Account Management</string>
    <string name="account_management_page_title">Account Management</string>
    <string name="login_back_button_content_description">Button to go back to previous screen.</string>
    <string name="refresh_action_text">Refresh</string>
</resources>
