<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="app.mblackman.orderfulfillment.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_secondary_light">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/elevation_small"
            android:onClick="@{() -> viewModel.startEtsyLogin()}"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/etsy_clear_login_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.477" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etsy"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintBaseline_toBaselineOf="@+id/materialButton"
            app:layout_constraintEnd_toStartOf="@+id/materialButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/etsy_clear_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_login"
            android:visibility="invisible"
            app:visibleOrInvisible="@{viewModel.hasEtsyLogin}"
            android:onClick="@{() -> viewModel.clearEtsyLogin()}"
            app:layout_constraintBottom_toBottomOf="@+id/materialButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/materialButton"
            app:layout_constraintTop_toTopOf="@+id/materialButton" />

        <TextView
            android:id="@+id/login_help_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_help_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/color_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialButton"
            app:layout_constraintVertical_bias="0.17000002" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>