<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="app.mblackman.orderfulfillment.ui.orders.OrdersViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.orders.OrdersFragment"
        android:background="@color/color_secondary_light"
        android:animateLayoutChanges="true">

        <LinearLayout
            android:id="@+id/progress_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/grid_medium_margin"
            android:gravity="center_vertical"
            android:visibility="@{viewModel.isLoadingOrders}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
                android:layout_marginStart="@dimen/grid_medium_margin"
                android:layout_marginEnd="@dimen/grid_medium_margin"
                android:text="@string/getting_orders_progress_text" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/no_items_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="@{viewModel.hasNoOrdersLoaded}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_layout"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/no_orders_icon_content_description"
                android:src="@drawable/weekend_24px"
                app:tint="@color/color_secondary" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_orders_message" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/order_details"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/no_items_layout"
            tools:listitem="@layout/list_item_order_details" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
